# competitive_programming

./: .gitignore  2021_1.cpp  README.md  aoc_template.cpp  graph.cpp  hash.sh  template.cpp
Baekjoon/: create_problem.sh  rainbownumbers.cpp  rainbownumbers2.cpp
SPOJ/: SPOJ_Submerge.cpp  create_problem.sh
aoc/: CMakeLists.txt  d1_1.cpp  d2_1.cpp  d3_1.cpp  d3_2.cpp  d4_1.cpp  d4_2.cpp
aoc/2021/: d1_1.cpp  d1_2.cpp  d2_1.cpp  d2_2.cpp  d3_1.cpp  d3_2.cpp  d4_1.cpp  d4_2.cpp
aoc/2022/: 10.cpp  11.cpp  11.txt  11_2.cpp  11_2.txt  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  16.py  17.cpp  17.py  17_1.cpp  18.cpp  19.cpp  19.py  2.cpp  20.cpp  20.py  21.cpp  21.txt  22.cpp  22.py  3  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a.cpp  template.cpp
aoc/2023/: 2020_1.cpp  2020_2.cpp  2020_3.cpp  2021_1.cpp  2021_2.cpp  2021_3.cpp  2022_2.cpp  2022_23.cpp  2023_1.cpp  2023_10.cpp  2023_10_1.cpp  2023_12.cpp  2023_13.cpp  2023_2.cpp  2023_3.cpp  2023_4.cpp  2023_5.cpp  2023_5_2.cpp  2023_6.cpp  2023_7.cpp  2023_8.cpp  2023_9.cpp  input.txt
baekjoon/: 10699.py  1074.cpp  1271.py
boj/: A_B.cpp  A_Linear_Pachinko.cpp  BOJ_FindingKthFood2_23792.cpp  BOJ_FindingSurfaceArea_16931.cpp  BOJ_FruitGame_19406.cpp  BOJ_Heights_17236.cpp  BOJ_Liar_1043.cpp  BOJ_PawnsRevenge_18583.cpp  BOJ_RomanExpressions_6652.cpp  BOJ_SortedAdjacentDifferences_30175.cpp  BOJ_TeamArrangement_6269.cpp  BOJ_UpsideDownPrime_10859.cpp  B_Wavelet_Compression.cpp  Binary_Search_Tree.cpp  EKSPLOZIJA.cpp  Editor_Navigation.cpp  LCS.cpp  Letters.cpp  Lexicographically_Largest_Common_Subsequence.cpp  Σ.cpp  (+44 more)
(+811 files in other folders)
