cmake_minimum_required(VERSION 3.20)
project(aoc)

set(CMAKE_CXX_STANDARD 14)

add_executable(d1_1 d1_1.cpp)

add_executable(d1_2 d1_2.cpp)
add_executable(d2_1 d2_1.cpp)
add_executable(d2_2 d2_2.cpp)
add_executable(d3_1 d3_1.cpp)
add_executable(d3_2 d3_2.cpp)
add_executable(d4_1 d4_1.cpp)
add_executable(d4_2 d4_2.cpp)